//
//  TStrings.swift
//  TaskManagerApp
//
//  Created by Sreekutty Maya on 25/02/2025.
//

import Foundation

struct TStrings {
   static let TWelcome = "Welcome"
   static let NTTaskList = "TASKIFY"
   static let NTAddTask = "ADD TASK"
    static let NTEditTask = "EDIT TASK"

}
