...
            print(error)
        }
    }

    /// Injects dummy test data for UI tests
    func seedTestData() {
        let tasks = [TaskModel(taskId: UUID(), taskCreationDate: Date.now, taskDescription: "Refactoring", taskPriority: .Low, taskTitle: "C Task 1", taskProgress: 1, isCompleted: true),
                     TaskModel(taskId: UUID(), taskCreationDate: Date.now, taskDescription: "Refactoring", taskPriority: .Low, taskTitle: "A Task 2", taskProgress: 0.5, isCompleted: false),
                     TaskModel(taskId: UUID(), taskCreationDate: Date.now, taskDescription: "Refactoring", taskPriority: .Low, taskTitle: "B Task 3", taskProgress: 0.5, isCompleted: false)]
        for task in tasks {
            let taskItem = TaskItem(context: context)
            taskItem.taskId = task.taskId
            taskItem.taskTitle = task.taskTitle
            taskItem.taskDescription = task.taskDescription
...
