...
    private var HeaderView: some View {
        VStack {
            Text(title)
                .headerTextHeading(theme: theme)
                .padding(.top, 20)
                .padding(.bottom, 5)
                .accessible(.text(label: "Search Option"))
            Text("\(title.capitalized) Tasks By")
                .secondaryTextHeading(theme: theme)
                .accessible(.text(label: "Tasks By"))

        }
    }
...
